philly-311-citywide-meta/src/objects/Case_Comment_Insertion_Failed__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the Case Comment which didn&apos;t get inserted in PS due to Server Error.</description>
    <fields>
        <fullName>Case_Comment_Body_10__c</fullName>
        <label>Case Comment Body 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Body_11__c</fullName>
        <label>Case Comment Body 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Body_12__c</fullName>
        <label>Case Comment Body 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Body_Size__c</fullName>
        <label>Case Comment Body Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_ID__c</fullName>
        <description>Parent Case ID of the Comment</description>
        <label>Case ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Parent Case Number of Comment</description>
        <label>Case Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request_ID__c</fullName>
        <label>Customer Request ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Case Comment Insertion Failed</label>
</CustomObject>